# IntegratedPipeline-Specialized-Non-LLM-AI-Agent-Framework

./: .dockerignore  .env  .gitignore  ARCHITECTURE.md  AbstractIntegratedModule.cp313-win_amd64.pyd  AbstractIntegratedModule.pyx  AbstractIntegratedPipeline-SourceCode.py  AbstractOptimizedModules.pyx  Changelog.md  Contributing.md  Docker_installation_Section.md  Dockerfile  Installation.md  IntegratedPipeline_Flow.html  MANIFEST.in  Optimized_Multi-Stage_Dockerfile  P2PDirectTest.py  Quick_Docker_start.bash  README.md  ROADMAP.md  SECURITY.md  Troubleshooting.md  architecture_diagram.js  changelog.md  dev_needs.txt  docker-compose.yml  entrypoint.sh  linux_setup.py  main.py  multi_agent_client.py  multi_agent_server.py  performance_log_only_MLP.txt  pyproject.toml  requirements.md  requirements.txt  setup.cfg  setup.py  start-multi-agent-cluster.sh  start.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: AbstractIntegratedPipeline-SourceCode.py  build-arm64.yaml  ci.yml  cibuildwheel.yml  lint.py  publish.yml  test.yml
AbstractIntegratedModule-separated-modules/: All-separated-modules  README.md  __init__.py  agents.py  async_manager.py  ensemble.py  explainability.py  geometry.py  inference.py  messaging.py  mlp.py  nn.py  pipeline.py  primitives.py  security.py  storage.py  transformer.py
P2P_Setups/: multi_agent_server.py
build-configs/: configs  pyproject-AIM-1.toml  pyproject-AIM-2.toml  pyproject-AIM-3.toml  pyproject-AIM-4.toml  pyproject.toml
docker-setups/: Dockerfile  setups
installation_guides/: Installation (1).md  Installation.md  installation  requirements.txt
performance_logs/: performance_log_with_TF.txt
readme-docs/: README-AIM-1.md  README-AIM-2.md  README-AIM-3.md  README-AIM-4.md  docs  opt-README.md
rust_optimization_/: Cargo.toml  lib.rs  opt-README.md  pyproject.toml  setups
separated-modules/: __init__.py  agent_distributed_inference.py  async_worker.py  auto_batcher.py  cohesive_agent_deployment.py  consecutive_peer_agent.py  core_ml.py  cross_session.py  ensemble.py  enums_and_dataclasses.py  examples_and_tests.py  explainability.py  integrated_pipeline.py  lstm.py  messaging.py  mlp.py  model_storage.py  pipeline_async_manager.py  pipeline_prediction_manager.py  query_node.py  security_utils.py  transformer.py
src/: AbstractIntegratedModule.pyx  AbstractOptimizedModules.pyx  source_file
utility_setups/: dev_needs.txt  setups
