[build-system]
requires = ["setuptools>=61", "wheel", "numpy>=2.1.0", "cython", "setuptools-rust"]
build-backend = "setuptools.build_meta"

[project]
name = "AbstractIntegratedModule"
version = "0.7.2"
description = "Integrated Pipeline with Specialized Non-LLM AI Agent Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=2.1.0"]
