[metadata]
name = integratedpipeline
version = 0.7.2
description = Integrated Pipeline — Cython extension example
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
license = MIT

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.10

[options.packages.find]
where = .
