[package]
name = "abstract_weights_core"
version = "0.7.2"
edition = "2026"


[lib]
name = "abstract_weights_core"
create-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.29", features = ["extension-module"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = { version = "1.0" }
