[package]
name = "abstract_weights_core"
version = "0.7.6"
edition = "2021"


[lib]
name = "abstract_weights_core"
path = "lib.rs"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_json = { version = "1.0" }
