[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[project]
name = "abstract_weights_core"
version = "0.7.5"
authors = [
    {name = "Micro-Novelty", email = "hernikpuspita5@gmail.com"},
]
description = "Optimization Module used by AbstractIntegratedModule library"
readme = "readme-docs/opt-README.md"
requires-python = "> 3.10"
